# party-digital-footprint

./: .env.example  .gitignore  ALEMBIC_USAGE.md  API_SPECIFICATION.md  CLAUDE.md  DATA_INTEGRATION_GUIDE.md  README.md  TWITTER_SCRAPER_SUMMARY.md  alembic.ini  curl_commands.md  dashboard.py  dummy_candidate_messages.json  dummy_candidates.json  dummy_constituencies.json  pyproject.toml  setup.py  test_engagement_api_demo.py  test_sentiment_dashboard.py  test_topic_api_demo.py  test_topic_modeling_demo.py  test_tweets_20250727_131056.json
alembic/: env.py
configs/: twitter_pipeline_example.json
docs/: INTELLIGENCE_REPORTS.md  PARTY_ONBOARDING.md  QUICKSTART.md  SENTIMENT_ANALYSIS.md  TWITTER_PIPELINE.md  TWITTER_PLAYWRIGHT_SCRAPER.md
examples/: scraper_integration.py  twitter_playwright_scraper_demo.py
mock-data/: facebook_messages.json  meta_ads_messages.json  twitter_messages.json  website_messages.json
old_references/: generate_reform_contract_data.py
scraped_data/: UKLabour_tweets_20250727_132529.json  reform_uk_analysis_20250727_131344.json  reform_uk_combined_20250727_132426.json  reformparty_uk_tweets_20250727_131344.json  reformparty_uk_tweets_20250727_132356.json
scripts/: generate_phase2_dummy_data.py  import_mock_data.py  reset_database.py  run_scraper.py  run_twitter_playwright_scraper.py  run_twitter_scraper_generic.py  setup_db.py  test_api.py  test_api_curl.sh  test_system.py  test_twitter_scraper_advanced.py  test_twitter_scraper_simple.py  twitter_pipeline.py
src/: database.py  models.py
tests/: README.md  conftest.py  test_api_basic.py  (+13 more)
(+38 files in other folders)
