[project]
name = "reform-uk-messaging"
version = "0.1.0"
description = "Reform UK digital footprint analysis and messaging collection"
authors = [
    { name = "Campaign Labs", email = "info@campaignlabs.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.19.0",
    "alembic>=1.13.0",
    "playwright>=1.40.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "tweepy>=4.14.0",
    "spacy>=3.7.0",
    "streamlit>=1.28.0",
    "pandas>=2.1.0",
    "plotly>=5.17.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "pypdf2>=3.0.1",
    "faker>=37.4.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.9.0",
    "isort>=5.12.0",
    "flake8>=6.1.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]


[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88
